--- a/ui/src/app/cohort-search/node-info/node-info.component.css
+++ b/ui/src/app/cohort-search/node-info/node-info.component.css
@@ -1,34 +1,55 @@
-.flex-container {
-  display: flex;
-  width: 90%;
-  align-items: center;
-  justify-content: flex-start;
+* {
+  white-space: nowrap;
 }
 
-.item-info {
-  min-width: 0;
+.item {
+  width: 100%;
   display: flex;
   flex-flow: row nowrap;
   justify-content: flex-start;
 }
 
-.item-info > button {
-  align-self: center;
-  margin: 0;
+.info {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: flex-start;
+  min-width: 0;
+}
+
+.info > button {
   color: rgb(98, 164, 32);
+  align-self: center;
+
+  /* Undo clarity's .btn styles */
+  margin: 0;
+  padding: 0;
   min-width: unset;
-  padding: 0 0.25rem;
+  max-width: unset;
+  min-height: unset;
+  max-height: unset;
+
+  /* So we can size it ourselves */
+  width: 1.25rem;
+  height: 1.25rem;
 }
 
-.item-info > .name {
-  flex: 1;
-  padding-left: 0.25rem;
+.selection-icon {
+  margin: calc((1.25rem - 20px) / 2);
+}
+
+.code {
+  font-size: smaller;
+}
+
+.info > .name {
+  white-space: nowrap;
   overflow: hidden;
-  white-space: nowrap;
   text-overflow: ellipsis;
+
+  margin: 0 0.2rem;
+  font-size: smaller;
 }
 
-.item-count {
-  padding: 0 0.5rem;
-  white-space: nowrap;
+.count {
+  align-self: baseline;
 }
