--- a/ui/src/app/cohort-search/tree-page/tree-page.component.css
+++ b/ui/src/app/cohort-search/tree-page/tree-page.component.css
@@ -13,6 +13,7 @@
   overflow-x: hidden;
   width: 100%;
   height: 100%;
+  padding-right: 0.4rem;
 }
 
 .selected {
@@ -42,5 +43,9 @@
   }
   .tree-view {
     min-height: 50%;
+    padding-bottom: 0.2rem;
+  }
+  .node-list {
+    padding-right: 0;
   }
 }
