Pull modifiers up to modal

--- a/ui/src/app/cohort-search/modal/modal.component.html
+++ b/ui/src/app/cohort-search/modal/modal.component.html
@@ -47,7 +47,7 @@
             <crit-tree-page [node]="rootNode"></crit-tree-page>
           </div>
           <div id="modifiers" class="panel" [class.show]="mode === 'modifiers'">
-            Modifiers
+            <crit-modifiers></crit-modifiers>
           </div>
           <div id="summary" class="panel" [class.show]="mode === 'summary'">
             Summary
