Dont fade the selection box between tree and modifiers

--- a/ui/src/app/cohort-search/modal/modal.component.html
+++ b/ui/src/app/cohort-search/modal/modal.component.html
@@ -43,22 +43,13 @@
         </crit-demographics>
 
         <ng-container *ngSwitchDefault>
-          <div id="tree" class="panel" [class.show]="mode === 'tree'">
-            <div class="panel-left">
+          <div id="tree" class="panel" [class.show]="mode === 'tree' || mode === 'modifiers'">
+            <!-- Tree Page -->
+            <div class="panel panel-left" [class.show]="mode === 'tree'">
               <crit-tree [node]="rootNode"></crit-tree>
             </div>
-            <div class="panel-right selected">
-              <h5 class="selection-title">{{ selectionTitle }}</h5>
-              <crit-selection-info
-                *ngFor="let parameter of (selection$ | async); let i = index"
-                [index]="i"
-                [parameter]="parameter">
-              </crit-selection-info>
-            </div>
-          </div>
-
-          <div id="modifiers" class="panel" [class.show]="mode === 'modifiers'">
-            <div class="panel-left">
+            <!-- Modifiers Page -->
+            <div class="panel panel-left" [class.show]="mode === 'modifiers'">
               <crit-modifier-page></crit-modifier-page>
             </div>
             <div class="panel-right selected">
@@ -71,6 +62,7 @@
             </div>
           </div>
 
+          <!-- Summary Page -->
           <div id="summary" class="panel" [class.show]="mode === 'summary'">
             Summary
           </div>
