--- a/ui/src/app/cohort-search/tree/tree.component.css
+++ b/ui/src/app/cohort-search/tree/tree.component.css
@@ -4,3 +4,12 @@
 ::ng-deep .clr-treenode-content {
   width: 100%!important;
 }
+
+.root-spinner {
+  left: 50%;
+  top: 50%;
+}
+
+.error {
+  color: red;
+}
