--- a/ui/src/app/cohort-search/modal/modal.component.css
+++ b/ui/src/app/cohort-search/modal/modal.component.css
@@ -96,6 +96,7 @@ button.active {
 }
 
 .panel-left {
+  display: none;
   flex: 1;
   min-width: 14rem;
   overflow-y: auto;
@@ -103,6 +104,11 @@ button.active {
   width: 100%;
   height: 100%;
   padding-right: 0.4rem;
+}
+
+.panel-left.show {
+  display: block;
+  animation: fadeEffect 1s;
 }
 
 .panel-right.selected {
@@ -134,7 +140,6 @@ h5.selection-title {
     padding-bottom: 0.2rem;
   }
 }
-
 
 @keyframes fadeEffect {
   from {opacity: 0;}
