--- a/ui/src/app/cohort-search/tree/tree.component.html
+++ b/ui/src/app/cohort-search/tree/tree.component.html
@@ -1,7 +1,9 @@
-<div *ngIf="loading" class="spinner" [style.left.%]="50">
+<div *ngIf="loading" class="spinner root-spinner">
   Loading...
 </div>
-<div *ngIf="error">
-  <em>Error! Oh Noes!</em>
+<!-- TODO: This error handling is a stub until we can get a designer to look at it -->
+<div *ngIf="error" class="error">
+  <clr-icon shape="error-standard"></clr-icon>
+  <em>Failed to Load Criteria</em>
 </div>
 <crit-node *ngFor="let item of children" [node]="item"></crit-node>
