fix naming error

--- a/ui/src/app/cohort-search/selection-info/selection-info.component.html
+++ b/ui/src/app/cohort-search/selection-info/selection-info.component.html
@@ -7,7 +7,7 @@
     <clr-icon shape="close"></clr-icon>
   </button>
   <span class="item-info">
-    <small *ngIf="i > 0" class="font-weight-bold">OR</small>
+    <small *ngIf="index > 0" class="font-weight-bold">OR</small>
     <small *ngIf="parameter.get('group')" class="text-muted">Group</small>
     <small class="name">
       <strong>{{ _type }}</strong>
