--- a/public-ui/src/app/styles/cards.css
+++ b/public-ui/src/app/styles/cards.css
@@ -1,6 +1,7 @@
 .card {
     border-radius: 0.2rem;
     box-shadow: 0 0.125rem 0.125rem 0 #d7d7d7;
+    font-family: "Gotham HTF", open-sans, sans-serif;
 }
 
 .card * {
@@ -27,4 +28,27 @@
     font-size: 10px;
     font-weight: 300;
     line-height: 16px;
+}
+
+/* Stat card with big number in it */
+.card.stats-card {
+    min-width: 336px;
+    padding-top: 36px;
+    padding-bottom: 36px;
+    border-radius: 0;
+}
+
+.stats-card .card-block {
+    border-bottom:none;
+    margin-bottom: 0;
+}
+.stats-card .card-title {
+    font-size: 20px;
+    color: #302C71;
+    font-weight :300;
+}
+
+.stats-card .card-stat {
+    font-size:55px;
+    color: rgba(0,0,0,0.87);
 }
