--- a/ui/src/app/cohort-review/detail-tab-table/detail-tab-table.component.html
+++ b/ui/src/app/cohort-review/detail-tab-table/detail-tab-table.component.html
@@ -18,6 +18,9 @@
         <span *ngSwitchCase="'itemDate'">
           {{ datum.itemDate }}
         </span>
+        <span *ngSwitchCase="'endDate'">
+          {{ datum.endDate | date:'yyyy-MM-dd HH:mm:ss' }}
+        </span>
         <span *ngSwitchCase="'sourceVocabulary'"
           [style.width.%]="100"
           [style.height.%]="100"
