--- a/ui/src/app/cohort-review/detail-tabs/detail-tabs.component.html
+++ b/ui/src/app/cohort-review/detail-tabs/detail-tabs.component.html
@@ -26,13 +26,15 @@
           <div *ngIf="detailsLoading" class="spinner">Loading...</div>
           <div *ngIf="!detailsLoading && !details">No data</div>
           <div *ngIf="!detailsLoading && details">
-            <div><b>Date:</b> {{ details.itemDate }} </div>
-            <div><b>Standard Vocabulary:</b> {{ details.standardVocabulary }} </div>
-            <div><b>Standard Name:</b> {{ details.standardName }} </div>
-            <div><b>Source Value:</b> {{ details.sourceValue }} </div>
-            <div><b>Source Vocabulary:</b> {{ details.sourceVocabulary }} </div>
-            <div><b>Source Name:</b> {{ details.sourceName }} </div>
-            <div><b>Age At Event:</b> {{ details.age }} </div>
+            <div><b>Start Date:</b> <small>{{ details.itemDate | date:'yyyy-MM-dd HH:mm:ss' }}</small></div>
+            <div *ngIf="details.dataType == 'ParticipantVisit'"><b>End Date:</b> <small>{{ details.endDate | date:'yyyy-MM-dd HH:mm:ss' }}</small></div>
+            <div><b>Standard Vocabulary:</b> <small>{{ details.standardVocabulary }}</small></div>
+            <div><b>Standard Name:</b> <small>{{ details.standardName }}</small></div>
+            <div><b>Source Value:</b> <small>{{ details.sourceValue }}</small></div>
+            <div *ngIf="details.dataType == 'ParticipantDrug'"><b>Signature:</b> <small>{{ details.signature }}</small></div>
+            <div><b>Source Vocabulary:</b> <small>{{ details.sourceVocabulary }}</small></div>
+            <div><b>Source Name:</b> <small>{{ details.sourceName }}</small></div>
+            <div><b>Age At Event:</b> <small>{{ details.age }}</small></div>
           </div>
         </div>
       </div>
