add component and outlet

--- a/ui/src/app/views/workspace/component.html
+++ b/ui/src/app/views/workspace/component.html
@@ -1,4 +1,5 @@
-<app-workspace-nav-bar></app-workspace-nav-bar>
+<!-- TODO: Remove this when completed. -->
+<!--<app-workspace-nav-bar></app-workspace-nav-bar>-->
 <div class="workspace-container">
   <div class="main-body">
     <h2>{{workspace.name}}</h2>
