--- a/ui/src/app/views/workspace-edit/component.html
+++ b/ui/src/app/views/workspace-edit/component.html
@@ -4,11 +4,13 @@
       <h2>Create a new Workspace</h2>
     </div>
     <div *ngSwitchCase="Mode.Edit">
-      <app-workspace-nav-bar></app-workspace-nav-bar>
+      <!-- TODO: Remove this when completed. -->
+      <!--<app-workspace-nav-bar></app-workspace-nav-bar>-->
       <h2>Edit workspace "{{workspace.name}}"</h2>
     </div>
     <div *ngSwitchCase="Mode.Clone">
-      <app-workspace-nav-bar></app-workspace-nav-bar>
+      <!-- TODO: Remove this when completed. -->
+      <!--<app-workspace-nav-bar></app-workspace-nav-bar>-->
       <h2>Clone workspace "{{oldWorkspaceName}}"</h2>
     </div>
   </ng-container>
