Remove box shadow and jitter on opening of nav bar menu

--- a/ui/src/app/views/workspace-nav-bar/component.css
+++ b/ui/src/app/views/workspace-nav-bar/component.css
@@ -44,6 +44,8 @@
   width: 2rem;
   border: none;
   height: 100%;
+  position: absolute;
+  right: 0;
 }
 
 ::ng-deep #workspace-top-nav-bar .btn-top.btn-overflow:hover {
@@ -58,6 +60,12 @@
   position: absolute !important;
   right: 0;
   height: 100%;
+  width: 5rem
+}
+
+::ng-deep #workspace-top-nav-bar .dropdown-menu {
+  right: 0;
+  width: 2rem;
 }
 
 .btn-group {
