Use flexbox to avoid header jitter

--- a/ui/src/app/views/signed-in/component.css
+++ b/ui/src/app/views/signed-in/component.css
@@ -8,6 +8,12 @@
   cursor: pointer;
 }
 
+.header-container {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
 .sidenav-toggle {
   transform: rotate(0deg);
   display: inline-block;
