--- a/ui/src/app/views/signed-in/component.html
+++ b/ui/src/app/views/signed-in/component.html
@@ -1,5 +1,5 @@
 <div class="page-container">
-  <div>
+  <div class="header-container">
     <div #sidenavToggleElement class="sidenav-toggle" [ngClass]="{'rotate': sidenavToggle}">
       <clr-icon shape="bars" (click)="sidenavToggle = !sidenavToggle"
           style="width: 1.5rem; height: 1.5rem; fill: #6cace4"></clr-icon>
