Fix positioning of menu. Should have been in previous PR...

--- a/ui/src/app/views/workspace-nav-bar/component.css
+++ b/ui/src/app/views/workspace-nav-bar/component.css
@@ -29,6 +29,8 @@
   color: white;
   border-top: none;
   border-bottom: none;
+  position: relative;
+  right: 0;
 }
 
 ::ng-deep #workspace-top-nav-bar .btn-group-overflow .btn.dropdown-toggle:hover {
