--- a/public-ui/src/app/views/survey-view/survey-view.component.html
+++ b/public-ui/src/app/views/survey-view/survey-view.component.html
@@ -49,7 +49,7 @@
         <input type="text" id="search-db" placeholder="Keyword Search">
       </div>
       <div class="box-sub-title"> Click on each response to view branding logic and age and gender distributions</div>
-      <div class="row question-result" *ngFor="let q of surveyResult.items, let i = index, let countAnalysis = q.analyses.shift()">
+      <div class="row question-result" *ngFor="let q of surveyResult.items, let i = index">
         <div class="row question-card">
           <div class="col-md-6 col-xs-12 col-sm-12">
             <div class="box-title"> Question {{i + 1}}</div>
@@ -57,7 +57,8 @@
           </div>
           <div class="col-md-6 col-xs-12 col-sm-12">
             <div class="response-dist">
-              <app-chart *ngIf="countAnalysis" [analysis]="countAnalysis" [chartOptions]="hcChartOptions(countAnalysis)" ></app-chart>
+              <!--<app-chart *ngIf="countAnalysis" [analysis]="countAnalysis" [chartOptions]="hcChartOptions(countAnalysis)" ></app-chart>-->
+            </div>
           </div>
         </div>
       </div>
