--- a/ui/src/app/views/profile-page/component.html
+++ b/ui/src/app/views/profile-page/component.html
@@ -79,7 +79,7 @@
       </div>
     </div>
     <div class="field-wrapper" style="padding-right: 2rem;">
-      <h2 style="margin-top: 0">Profile Completion Progress:</h2>
+      <h3 class="profile-header" style="margin-top: 0">Profile Completion Progress:</h3>
       <div class="card" style="height: 10.4rem;">
         <div style="display: flex; align-items: center;">
           <div style="height: 7.8rem;">
@@ -132,7 +132,7 @@
       </div>
     </div>
     <div class="field-wrapper">
-      <h2>Institution Affiliations:</h2>
+      <h3 class="profile-header" style="margin-bottom: 1rem;">Institution Affiliations:</h3>
       <div *ngIf="profileLoaded">
         <div *ngFor="let affiliation of workingProfile.institutionalAffiliations">
           <div class="field-wrapper">
