put new account name all on one line

--- a/ui/src/app/views/account-creation-success/component.html
+++ b/ui/src/app/views/account-creation-success/component.html
@@ -4,7 +4,10 @@
     <h4>Your All of Us research account has been created!</h4>
   </div>
   <div class="row">
-    <h3>We've created a Google account for {{email}}@{{gsuiteDomain}} </h3>
+    <h3>We've created a Google account for </h3>
+  </div>
+  <div class="row" style="white-space: nowrap">
+    <h3>{{email}}@{{gsuiteDomain}} </h3>
   </div>
   <div class="row">
     <h4>Now you need to log in using this account</h4>
