--- a/ui/src/app/views/account-creation/component.css
+++ b/ui/src/app/views/account-creation/component.css
@@ -33,3 +33,15 @@
   vertical-align: middle;
   color: black;
 }
+
+.is-solid.info-icon {
+  color: #302C71;
+  height: 22px;
+  width: 22px;
+}
+
+.domain {
+  font-size: 16px;
+  font-weight: 300;
+  color: #302C71;
+}
