--- a/ui/src/app/views/account-creation/component.html
+++ b/ui/src/app/views/account-creation/component.html
@@ -15,7 +15,26 @@
     </div>
     <div class="form-section">
       <input type="text" class="short-input" id="username" name="username" [(ngModel)]="profile.username" (ngModelChange)="usernameChanged()" placeholder="Username">
-      <h5 style="display: inline-block;">@{{gsuiteDomain}}</h5>
+      <h5 style="display: inline-block;" class="domain">@{{gsuiteDomain}}</h5>
+      <clr-tooltip>
+        <clr-icon clrTooltipTrigger shape="info-standard" class="is-solid info-icon"></clr-icon>
+        <clr-tooltip-content clrPosition="top-right" clrSize="lg" *clrIfOpen>
+          <div>
+            Usernames can contain letters (a-z), numbers (0-9), dashes (-), underscores (_),
+            apostrophies ('), and periods (.).
+          </div>
+          <br>
+          <div>
+            Usernames can't contain an ampersand (&), equal sign (=), brackets (<,>), plus sign (+),
+            comma (,), or more than one period (.) in a row.
+          </div>
+          <br>
+          <div>
+            Usernames can begin or end with non-alphanumeric characters except (.), with a maximum
+            of 64 characters.
+          </div>
+        </clr-tooltip-content>
+      </clr-tooltip>
       <div *ngIf="usernameConflictError" class="error">
         Username is already taken.
       </div>
