--- a/ui/src/app/views/account-creation/component.html
+++ b/ui/src/app/views/account-creation/component.html
@@ -38,6 +38,9 @@
       <div *ngIf="usernameConflictError" class="error">
         Username is already taken.
       </div>
+      <div *ngIf="usernameInvalidError" class="error">
+        Username is not a valid username.
+      </div>
     </div>
     <div class="form-section">
       <input type="password" class="short-input" id="password" name="password" [(ngModel)]="password" placeholder="Password">
