--- a/ui/src/app/views/account-creation/component.html
+++ b/ui/src/app/views/account-creation/component.html
@@ -20,18 +20,12 @@
         <clr-icon clrTooltipTrigger shape="info-standard" class="is-solid info-icon"></clr-icon>
         <clr-tooltip-content clrPosition="top-right" clrSize="lg" *clrIfOpen>
           <div>
-            Usernames can contain letters (a-z), numbers (0-9), dashes (-), underscores (_),
-            apostrophies ('), and periods (.).
+            Usernames can contain only letters (a-z), numbers (0-9), dashes (-), underscores (_),
+            apostrophies ('), and one period (.) in a row (maximum of 64 characters).
           </div>
           <br>
           <div>
-            Usernames can't contain an ampersand (&), equal sign (=), brackets (<,>), plus sign (+),
-            comma (,), or more than one period (.) in a row.
-          </div>
-          <br>
-          <div>
-            Usernames can begin or end with non-alphanumeric characters except (.), with a maximum
-            of 64 characters.
+            Usernames can begin or end with non-alphanumeric characters except (.).
           </div>
         </clr-tooltip-content>
       </clr-tooltip>
