Provisionally remove summary page

--- a/ui/src/app/cohort-search/modal/modal.component.html
+++ b/ui/src/app/cohort-search/modal/modal.component.html
@@ -16,11 +16,13 @@
             (click)="mode = 'modifiers'">
             Modifiers
           </button>
+          <!--
           <button type="button" class="btn"
             [class.active]="mode === 'summary'"
             (click)="mode = 'summary'">
             Summary
           </button>
+          -->
         </ng-container>
       </div>
       <button
@@ -62,10 +64,11 @@
             </div>
           </div>
 
-          <!-- Summary Page -->
+          <!-- Summary Page
           <div id="summary" class="panel" [class.show]="mode === 'summary'">
             Summary
           </div>
+          -->
         </ng-container>
 
       </ng-container>
