--- a/ui/src/app/views/account-creation/component.html
+++ b/ui/src/app/views/account-creation/component.html
@@ -21,7 +21,7 @@
         <clr-tooltip-content clrPosition="top-right" clrSize="lg" *clrIfOpen>
           <div>
             Usernames can contain only letters (a-z), numbers (0-9), dashes (-), underscores (_),
-            apostrophies ('), and one period (.) in a row (maximum of 64 characters).
+            apostrophes ('), and one period (.) in a row (maximum of 64 characters).
           </div>
           <br>
           <div>
