--- a/ui/src/app/views/workspace-list/component.html
+++ b/ui/src/app/views/workspace-list/component.html
@@ -31,8 +31,13 @@
     </div>
   </div>
   <div class="card-area">
-    <div *ngIf="workspacesLoading" style="margin-top: 1.5rem;">
-      <span class="spinner spinner-lg" style="padding-top: 1rem"></span>
+    <div *ngIf="workspacesLoading" class="spinner-container">
+      <span class="spinner spinner-lg"></span>
+      <p *ngIf="billingProjectInitialized === false" class="spinner-text">
+        <span class="spinner-header">Initializing Researcher Account</span>
+        <br>
+        May take a few minutes
+      </p>
     </div>
     <div class="card" *ngFor="let workspaceResponse of workspaceList" routerLink="/workspace/{{workspaceResponse.workspace.namespace}}/{{workspaceResponse.workspace.id}}">
       <h5 class="workspace-name">{{workspaceResponse.workspace.name}}</h5>
