--- a/ui/src/app/views/workspace/component.css
+++ b/ui/src/app/views/workspace/component.css
@@ -29,8 +29,27 @@ h3 {
   margin: 1rem 0rem 0rem 1rem;
 }
 
-.cluster-spinner {
-  display: inline-block;
+.spinner-container {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+}
+
+.spinner {
+  margin-top: 1rem;
+}
+
+.spinner-header {
+  color: #007CBB;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.spinner-text {
+  text-align: center;
+  /* This forces the flex layout to put the text on a new line. */
+  margin-left: calc(50% - 75px);
+  margin-right: calc(50% - 75px);
 }
 
 .notebook-table-row {
